--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@dotenvx/dotenvx": "^1.44.1",
+    "bcryptjs": "^3.0.2",
     "express": "^5.1.0",
     "http-status-codes": "^2.3.0",
     "mongoose": "^8.15.1"
