--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "bcryptjs": "^3.0.2",
     "express": "^5.1.0",
     "express-xss-sanitizer": "^2.0.0",
+    "helmet": "^8.1.0",
     "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.15.1"
