--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@dotenvx/dotenvx": "^1.44.1",
     "bcryptjs": "^3.0.2",
+    "cors": "^2.8.5",
     "express": "^5.1.0",
     "express-xss-sanitizer": "^2.0.0",
     "helmet": "^8.1.0",
