--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "express": "^5.1.0",
+    "express-rate-limit": "^7.5.0",
     "express-xss-sanitizer": "^2.0.0",
     "helmet": "^8.1.0",
     "http-status-codes": "^2.3.0",
