--- a/backend/package.json
+++ b/backend/package.json
@@ -15,7 +15,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "node --env-file=.env --watch app.js",
-    "test": "jest"
+    "test": "jest",
+    "prod": "node app.js"
   },
   "dependencies": {
     "bcryptjs": "^3.0.2",
