--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,34 @@
-*/node_modules
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+# Node modules (all subfolders)
+**/node_modules
+
+# Build output
+dist
+dist-ssr
+
+# Local environment files (all subfolders)
 **/.env
+*.local
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+# Ignore logs in any subfolder
+**/logs
+**/*.log
